# rmk-companion

./: .gitignore  Cargo.toml  README.adoc
rmk-app/: package.json  pnpm-lock.yaml  vite.config.ts
rmk-app/src-tauri/: Cargo.toml  tauri.conf.json
rmk-app/src-tauri/src/: debug_actor.rs  lib.rs  main.rs  mount.rs  shutdown.rs
rmk-companion/: package.json  pnpm-lock.yaml  vite.config.ts
rmk-companion/src/: App.svelte
rmk-companion/src-tauri/: Cargo.toml  tauri.conf.json
rmk-companion/src-tauri/src/: command.rs  main.rs  settings.rs
rmk-companion/src/lib/: Editor.svelte
rmk-daemon/: Cargo.toml
rmk-daemon/src/: lib.rs  settings.rs  shutdown.rs  state.rs
rmk-daemon/src/api/: mod.rs
rmk-daemon/src/ui/: tui.rs
rmk-fs/: Cargo.toml
rmk-fs/resources/: ._.com.apple.timemachine.donotpresent  generate_icon.sh  icon.vectornator
rmk-fs/src/: attr.rs  errors.rs  fs.rs  fs_actor.rs  lib.rs  notebook_actor.rs  schemas.rs  table.rs  table_actor.rs  table_static.rs
rmk-fs/src/backend/: mod.rs  table.rs  table_static.rs
rmk-fs/src/backend/os/: macos.rs  mod.rs
rmk-fs/src/backend/os/resources/: .VolumeIcon.icns
rmk-fs/src/fs/: fs.rs  fs_fuse.rs  mod.rs
rmk-notebook/: Cargo.toml
rmk-notebook/samples/test/: 0d9af7de-39f8-4251-8500-330eec0d00f0.metadata
rmk-notebook/src/: lib.rs  notebook.rs  render.rs
