[package]
name = "rmk-daemon"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1"
futures = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "sync",
    "tracing",
] }
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
rmk-fs = { path = "../rmk-fs" }
