[package]
name = "rmk-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.13", features = ["toml"] }
futures = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
pretty_env_logger = "0.4"
anyhow = "1"
actix = "0.13"
rmk-fs = { path = "../rmk-fs" }
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
lazy_static = "1"
directories = "4"
toml = "0.5"

tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "sync",
    "tracing",
] }

once_cell = "1"

dialoguer = "0.10"
indicatif = "0.16"
console = "0.15"
