[package]
name = "rmk-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.13", features = ["toml"] }
futures = "0.3"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
pretty_env_logger = "0.4"
anyhow = "1"
rmk-fs = { path = "../rmk-fs" }
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
lazy_static = "1"
directories = "4"
toml = "0.7"
datafusion = "18"

tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "sync",
    "tracing",
] }


once_cell = "1"
tui = "0.19"
crossterm = { version = "0.25", features = ["event-stream"] }
tui-logger = "0.8"
tui-textarea = { version = "0.2", features = ["crossterm"] }
clap = { version = "4", features = ["derive"] }
warp = "0.3.3"
