[package]
name = "rmk-fs"
version = "0.1.0"
edition = "2021"


[dependencies]
libc = "0.2"
arrow = "9"
async-trait = "0.1"
datafusion = "7"
fuser = "0.11"
glob = "0.3"
log = "0.4.16"
thiserror = "1"
# https://arrow.apache.org/datafusion/user-guide/library.html
# snmalloc-rs = "0.2"
tokio = { version = "1", features = ["rt-multi-thread"] }

rmk-notebook = { path = "../rmk-notebook" }
actix = "0.13"
uuid = { version = "1", features = ["v4", "serde"] }
