[package]
name = "rmk-fs"
version = "0.1.0"
edition = "2021"


[dependencies]
libc = "0.2"
async-trait = "0.1"
datafusion = "17"
fuser = "0.12"
glob = "0.3"
log = "0.4.16"
thiserror = "1"
# https://arrow.apache.org/datafusion/user-guide/library.html
# snmalloc-rs = "0.2"
tokio = { version = "1", features = ["rt-multi-thread"] }

rmk-notebook = { path = "../rmk-notebook" }
uuid = { version = "1", features = ["v4", "serde"] }
itertools = "0.10"
once_cell = "1"
indoc = "2"
